2009-02-13  Jason Merrill  <jason@redhat.com>

	PR c++/39070
	* g++.dg/cpp0x/decltype16.C: New.

2009-02-13  Joseph Myers  <joseph@codesourcery.com>

	PR c/35444
	* gcc.dg/noncompile/pr35444-1.c, gcc.dg/noncompile/pr35444-2.c:
	New tests.

2009-02-10  Steve Ellcey  <sje@cup.hp.com>

	PR c/39084
	* gcc.dg/pr39084.c: New test.

2009-02-09  Janis Johnson  <janis187@us.ibm.com>

	PR c/39035
	* gcc.dg/dfp/pr39035.c: New test.

2009-02-08  Joseph Myers  <joseph@codesourcery.com>

	PR c/35434
	* gcc.dg/attr-alias-4.c: New test.

2009-02-08  Joseph Myers  <joseph@codesourcery.com>

	PR c/36432
	* gcc.dg/c90-flex-array-2.c, gcc.dg/c99-flex-array-6.c: New tests.

2009-02-05  Joseph Myers  <joseph@codesourcery.com>

	PR c/35435
	* gcc.dg/tls/diag-6.c: New test.

2009-02-05  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-02-05  Daniel Berlin  <dberlin@dberlin.org>

	* gcc.c-torture/execute/pr39100.c: New.

2009-02-04  Joseph Myers  <joseph@codesourcery.com>

	PR c/35433
	* gcc.dg/init-bad-6.c: New test.

2009-02-03  Paolo Bonzini  <bonzini@gnu.org>

	PR c++/36897
	* g++.dg/template/func2.C: New test.

	PR c++/37314
	* g++.dg/template/typename15.C: New.
	* g++.dg/template/typename16.C: New.

2009-02-02  Jason Merrill  <jason@redhat.com>

	PR c++/39054
	* g++.dg/parse/dtor14.C: New test.

2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-01-14  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/38245
	* gcc.dg/pr38245-3.c: New test.
	* gcc.dg/pr38245-3.h: New file.
	* gcc.dg/pr38245-4.c: New file.
	* gcc.dg/pr38364.c: New test.

2009-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39041
	* gcc.c-torture/compile/pr39041.c: New testcase.

2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-01-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/38789
	* gcc.c-torture/compile/pr38789.c: New test.

2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline: